Data extraction and fetch API data

--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -161,8 +161,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "d96c8b54-5593-4b59-a939-5a16691eaaa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chunk size: 50000\n",
+      "Chunk size: 50000\n",
+      "Chunk size: 50000\n",
+      "Chunk size: 50000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data Extraction\n",
+    "\n",
+    "for chunk in pd.read_csv(\"clickstream.csv\", chunksize=50000):\n",
+    "    print(\"Chunk size:\", len(chunk))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "9609e95a-2615-4e1a-99db-a712be9e21a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chunk size: 50000\n",
+      "Chunk size: 50000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for chunk in pd.read_csv(\"transactions.csv\", chunksize=50000):\n",
+    "    print(\"Chunk size:\", len(chunk))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "02371fba-48dd-4b98-ae6b-aa82c3953c37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USD to INR: 88.2341\n",
+      "Raw JSON saved to: data/raw/api_currency/2025-09-07/exchange_rates.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fetch currency rates via ExchangeRate API\n",
+    "\n",
+    "import requests\n",
+    "import datetime\n",
+    "import json\n",
+    "import os\n",
+    "\n",
+    "API_KEY = \"b74bf2ded174e3515ea87712\"  \n",
+    "url = f\"https://v6.exchangerate-api.com/v6/{API_KEY}/latest/USD\" # API Endpoint\n",
+    "\n",
+    "response = requests.get(url)\n",
+    "data = response.json()\n",
+    "\n",
+    "if response.status_code == 200 and data.get(\"result\") == \"success\":\n",
+    "    rates = data[\"conversion_rates\"]\n",
+    "    print(\"USD to INR:\", rates.get(\"INR\"))\n",
+    "\n",
+    "    today = datetime.date.today().strftime(\"%Y-%m-%d\")\n",
+    "    save_dir = f\"data/raw/api_currency/{today}\" \n",
+    "    os.makedirs(save_dir, exist_ok=True)\n",
+    "    save_path = os.path.join(save_dir, \"exchange_rates.json\") # Save raw JSON response\n",
+    "\n",
+    "    with open(save_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    print(f\"Raw JSON saved to: {save_path}\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"API Error:\", data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e7881ac-5f06-4096-9ca2-a40ba9176b31",
    "metadata": {},
    "outputs": [],
    "source": []
