Update to fetch API data

--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -13,7 +13,7 @@
    "id": "81b049f4-8e1e-4db8-bc75-ee74a3ca0643",
    "metadata": {},
    "source": [
-    "## Data Exploration"
+    "## **Data Exploration**"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "c8629a12-031a-48ff-9c30-5ce18101621b",
    "metadata": {},
    "source": [
-    "### Task 1\n",
+    "### **Task 1**\n",
     "\n",
     "**Explore datasets and document schemas, null values, and duplicates in README.md.**"
    ]
@@ -154,7 +154,7 @@
    "id": "9ddff054-1a35-4358-8aa9-08f167ff0c8e",
    "metadata": {},
    "source": [
-    "### Task 2\n",
+    "### **Task 2**\n",
     "\n",
     "**Extract data — read CSVs in chunks (e.g., 50,000 rows) and fetch currency rates via API.**"
    ]
@@ -249,14 +249,6 @@
     "else:\n",
     "    print(\"API Error:\", data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e7881ac-5f06-4096-9ca2-a40ba9176b31",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
